Applied SOLID, GRASP, GoF on the code